# AutoClean-AI

./: .dockerignore  .env  Dockerfile  LICENSE  README.md  app.py  deploy.sh  deploy_hf.py  evaluator.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  task.py
env/: .force_deploy  .gitignore  Dockerfile  README.md  __init__.py  action_engine.py  app.py  cleaned_dataset.csv  client.py  config.yaml  datacleaner_env.py  env.py  evaluator.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  reward.py  task.py  tasks.py  test_grader.py
env/prompts/: cleaning.txt  system.txt
env/server/: Dockerfile  __init__.py  app.py  env_environment.py
env/static/: index.html
env/tasks/: employee_demo.py
env/utils/: cleaners.py  transformers.py  validators.py
openenv_datacleaner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
server/: app.py
static/: index.html
