[project]
name = "openenv-datacleaner"
version = "1.0.0"
description = "OpenEnv-compliant AI-powered data cleaning environment"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "fastapi",
    "uvicorn",
    "pydantic",
    "pandas",
    "numpy",
    "openenv-core",
    "huggingface_hub",
    "openai",
]

[project.scripts]
server = "env.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
